# loadout

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/: aida-project-context.yml
.claude/skills/project-context/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/architecture/: README.md
loadout/: __init__.py  brew.py  build.py  check.py  claude.py  cli.py  config.py  core.py  display.py  exceptions.py  globals.py  init.py  macos.py  merge.py  runner.py  scaffold.py  secrets.py  ssh.py  ui.py  update.py
tests/: __init__.py  conftest.py  test_brew.py  test_build.py  test_check.py  test_claude.py  test_cli.py  test_config.py  test_core.py  test_display.py  test_error_handling.py  test_exceptions.py  test_globals.py  test_init.py  test_integration.py  test_macos.py  test_merge.py  test_placeholder.py  test_runner.py  test_scaffold.py  test_secrets.py  test_ssh.py  test_ui.py  test_update.py
tests/fixtures/dotfiles-private/dotfiles/base/: .aliases  .zshrc  config.yaml  settings.json
tests/fixtures/dotfiles-private/dotfiles/orgs/acme/: .aliases  .gitconfig  .vimrc  .zshrc  config.yaml  settings.json
tests/fixtures/dotfiles-private/dotfiles/orgs/widgets/: .gitconfig  .zshrc  config.yaml  settings.json
tests/fixtures/dotfiles/dotfiles/base/: .aliases  .gitconfig  .zshrc  config.yaml  settings.json
