[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oakensoul-loadout"
version = "0.1.0"
description = "Machine configuration management CLI — dotfiles, Homebrew, global packages, and health checks."
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = [
    { name = "oakensoul", email = "github@oakensoul.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Installation/Setup",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
    "cookiecutter>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/oakensoul/loadout"
Repository = "https://github.com/oakensoul/loadout"
Issues = "https://github.com/oakensoul/loadout/issues"

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "cyclonedx-bom>=4.0",
    "mypy>=1.10",
    "pip-audit>=2.7",
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "twine>=5.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
loadout = "loadout.cli:main"

[tool.setuptools.package-data]
loadout = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S314"]  # tests use assert, test credentials, and XML parsing
"loadout/check.py" = ["S607"]  # health checks intentionally probe PATH-resolved binaries

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "cookiecutter.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=loadout --cov-report=term-missing --cov-fail-under=95"
